add access to database (with db from azure) and hot fix in VehicleCard

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
-{
+﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CEPiK;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:cepik-i5b6s1.database.windows.net;Database=cepik;User ID=cepik@cepik-i5b6s1;Password=HasłoInneNiżWszystkie01;Trusted_Connection=False;Encrypt=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
